@@ -5,3 +5,8 @@
 //todo remove navbar for index page (not needed)
 
 //todo  sql users table (then do reg and login With sessions)
+
+//todo  login  w/sessions
+todo md5 or higher passwords
+todo backgrounds
+
