@@ -8,3 +8,7 @@ Register links to register page.
 
 6/12/15 12:39 Removed the old register button. Changed the register page which says "Talk about yourself",
 to include a password instead.
+
+6/12/15 18:30 - Login success function added in controller folder.
+                -called in controller.
+6/12/15 18:35 - user is able to enter register succesfully.
